// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SectionBucket Slice Slice matches snapshot for \`null\` breakpoint value 1`] = `<DocumentFragment />`;

exports[`Render SectionBucket Slice Slice matches snapshot with sm 1`] = `
<DocumentFragment>
  <div
    class="css-1wil340"
  >
    <div
      class="css-6uqogc"
      data-testid="scroll-container"
    >
      <div
        class="css-gmqme8"
        data-testid="article-container"
      >
        <div
          class="css-yd8jik"
          data-testid="article-block"
        >
          <div
            class="css-lihpnt"
          >
            <div
              class="css-kdlajr"
            >
              <div
                class="css-86cix"
              >
                <div
                  class="css-1aiajnh"
                >
                  <section
                    class="css-6cr1qt"
                  >
                    <h3
                      class="nk-headline-heading css-i2jo9u"
                    >
                      Title bar
                    </h3>
                  </section>
                </div>
              </div>
              <a
                class="css-1vespcj"
                data-testid="buttonLink"
                href="https://www.thetimes.co.uk/"
                role="link"
              >
                <svg
                  aria-hidden="true"
                  class="css-3rbz36"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    fill="currentcolor"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Short title of the card describing the main content"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    BREAKING
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    Q&A
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    BREAKING
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    NEW
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
        </div>
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-yd8jik"
          data-testid="article-block"
        >
          <div
            class="css-lihpnt"
          >
            <div
              class="css-kdlajr"
            >
              <div
                class="css-86cix"
              >
                <div
                  class="css-1aiajnh"
                >
                  <section
                    class="css-6cr1qt"
                  >
                    <h3
                      class="nk-headline-heading css-i2jo9u"
                    >
                      Title bar
                    </h3>
                  </section>
                </div>
              </div>
              <a
                class="css-1vespcj"
                data-testid="buttonLink"
                href="https://www.thetimes.co.uk/"
                role="link"
              >
                <svg
                  aria-hidden="true"
                  class="css-3rbz36"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    fill="currentcolor"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Short title of the card describing the main content"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    BREAKING
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    NEW
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
        </div>
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-yd8jik"
          data-testid="article-block"
        >
          <div
            class="css-lihpnt"
          >
            <div
              class="css-kdlajr"
            >
              <div
                class="css-86cix"
              >
                <div
                  class="css-1aiajnh"
                >
                  <section
                    class="css-6cr1qt"
                  >
                    <h3
                      class="nk-headline-heading css-i2jo9u"
                    >
                      Title bar
                    </h3>
                  </section>
                </div>
              </div>
              <a
                class="css-1vespcj"
                data-testid="buttonLink"
                href="https://www.thetimes.co.uk/"
                role="link"
              >
                <svg
                  aria-hidden="true"
                  class="css-3rbz36"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    fill="currentcolor"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Short title of the card describing the main content"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    BREAKING
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
        </div>
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
        <div
          class="css-yd8jik"
          data-testid="article-block"
        >
          <div
            class="css-lihpnt"
          >
            <div
              class="css-kdlajr"
            >
              <div
                class="css-86cix"
              >
                <div
                  class="css-1aiajnh"
                >
                  <section
                    class="css-6cr1qt"
                  >
                    <h3
                      class="nk-headline-heading css-i2jo9u"
                    >
                      Title bar
                    </h3>
                  </section>
                </div>
              </div>
              <a
                class="css-1vespcj"
                data-testid="buttonLink"
                href="https://www.thetimes.co.uk/"
                role="link"
              >
                <svg
                  aria-hidden="true"
                  class="css-3rbz36"
                  fill="currentcolor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    fill="currentcolor"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Short title of the card describing the main content"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    BREAKING
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    NEW
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-6tvr2h"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    BREAKING
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-1basb1c"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    INTERVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Short title of the card describing the main content
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1atazsr"
          />
        </div>
        <hr
          aria-hidden="true"
          class="css-13rcg9f"
          data-testid="divider"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render SectionBucket Slice Slice matches snapshot with xl 1`] = `
<DocumentFragment>
  <div
    class="css-1frprgo"
  >
    <div
      class="css-gmqme8"
      data-testid="article-container"
    >
      <div
        class="css-yd8jik"
        data-testid="article-block"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-kdlajr"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-6cr1qt"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Title bar
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-1vespcj"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="Short title of the card describing the main content"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  BREAKING
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  Q&A
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  BREAKING
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  NEW
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
      </div>
      <hr
        aria-hidden="true"
        class="css-13rcg9f"
        data-testid="divider"
      />
      <div
        class="css-yd8jik"
        data-testid="article-block"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-kdlajr"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-6cr1qt"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Title bar
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-1vespcj"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="Short title of the card describing the main content"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  BREAKING
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  NEW
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
      </div>
      <hr
        aria-hidden="true"
        class="css-13rcg9f"
        data-testid="divider"
      />
      <div
        class="css-yd8jik"
        data-testid="article-block"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-kdlajr"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-6cr1qt"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Title bar
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-1vespcj"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="Short title of the card describing the main content"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  BREAKING
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
      </div>
      <hr
        aria-hidden="true"
        class="css-13rcg9f"
        data-testid="divider"
      />
      <div
        class="css-yd8jik"
        data-testid="article-block"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-kdlajr"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-6cr1qt"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Title bar
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-1vespcj"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="Short title of the card describing the main content"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  BREAKING
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  NEW
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-6tvr2h"
              >
                <div
                  class="css-gb5m6n"
                >
                  BREAKING
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-1basb1c"
              >
                <div
                  class="css-gb5m6n"
                >
                  INTERVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Short title of the card describing the main content
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1atazsr"
        />
      </div>
      <hr
        aria-hidden="true"
        class="css-13rcg9f"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;
